--- a/acrlibrary/src/main/AndroidManifest.xml
+++ b/acrlibrary/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application>
         <activity
-            android:name=".StartActivity"
+            android:name=".ACRActivity"
             android:exported="false" />
     </application>
 
